<resources>
    <string name="app_name">Inventory App</string>

    <!-- Text that will show when there is no inventory in the app[CHAR LIMIT=20] -->
    <string name="empty_title_text">No Products in Stock</string>

    <!-- Label for product category [CHAR LIMIT=30] -->
    <string name="product_category">Brand</string>

    <!-- Label for model category [CHAR LIMIT=30] -->
    <string name="model_category">Model</string>

    <!-- Label for price category [CHAR LIMIT=30] -->
    <string name="price_category">Price</string>

    <!-- Label for quantity category [CHAR LIMIT=30] -->
    <string name="quantity_category">Quantity</string>

    <!-- Label for supplier category [CHAR LIMIT=30] -->
    <string name="supplier_category">Supplier Name</string>

    <!-- Label for contact the supplier category [CHAR LIMIT=30] -->
    <string name="contact_category">Supplier Email</string>

    <!-- Label for required entry hint [CHAR LIMIT=30] -->
    <string name="editor_required_hint">Required</string>

    <!-- Label for sale button [CHAR LIMIT=30] -->
    <string name="sale_button">Sale</string>

    <!-- Label for restock button [CHAR LIMIT=30] -->
    <string name="restock_button">Restock</string>

    <!-- Label for order button [CHAR LIMIT=30] -->
    <string name="order_button">Order</string>

    <!-- Label for order button [CHAR LIMIT=30] -->
    <string name="order_summary">Order summary</string>

    <!-- Label for editor menu option to save a product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_add_dummy_data">Add Dummy Data</string>

    <!-- Label for overflow menu option that orders more  product in the app [CHAR LIMIT=20] -->
    <string name="action_order_product">Order Product</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new Product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing Product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message in editor when the product has not saved [CHAR LIMIT=NONE] -->
    <string name="toast_insert_product_not_saved">Product Not Saved</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="toast_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="toast_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>





    <string name="stock">Stock</string>
    <string name="dollar_sign">$</string>
</resources>
